# bfem

./: .gitignore  Cargo.toml  README.md
examples/: optimiser_right.bfem  simple_loop_optimise.bfem  simple_move.bfem  variable_letters.bfem  variable_move.bfem
src/: errors.rs  main.rs  parser.rs  program.rs  tape.rs
