[package]
name = "bfem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
clap = { version = "4.3", features = ["derive"] }
getch = "0.3.1"
miette = { version = "5.9.0", features = ["fancy"] }
thiserror = "1.0.40"
